bug 周课表overflow、html背景根据 主题模式变化

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ body {
 
 html {
   background-color: #e6e6e6;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 * {
